salesforce/Document Creator Plugin/force-app/main/default/objects/Template__c/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <label>Profiles</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analytics Cloud Integration User</fullName>
            </value>
            <value>
                <fullName>Analytics Cloud Security User</fullName>
            </value>
            <value>
                <fullName>Authenticated Website</fullName>
            </value>
            <value>
                <fullName>call center Profile</fullName>
            </value>
            <value>
                <fullName>Chatter External User</fullName>
            </value>
            <value>
                <fullName>Chatter Free User</fullName>
            </value>
            <value>
                <fullName>Chatter Moderator User</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
            <value>
                <fullName>Cross Org Data Proxy User</fullName>
            </value>
            <value>
                <fullName>Custom: Marketing Profile</fullName>
            </value>
            <value>
                <fullName>Custom: Sales Profile</fullName>
            </value>
            <value>
                <fullName>Custom: Support Profile</fullName>
            </value>
            <value>
                <fullName>Customer Community Login User</fullName>
            </value>
            <value>
                <fullName>Customer Community Plus Login User</fullName>
            </value>
            <value>
                <fullName>Customer Community Plus User</fullName>
            </value>
            <value>
                <fullName>Customer Community User</fullName>
            </value>
            <value>
                <fullName>Customer Portal Manager Custom</fullName>
            </value>
            <value>
                <fullName>Customer Portal Manager Standard</fullName>
            </value>
            <value>
                <fullName>External Identity User</fullName>
            </value>
            <value>
                <fullName>Force.com - App Subscription User</fullName>
            </value>
            <value>
                <fullName>Force.com - Free User</fullName>
            </value>
            <value>
                <fullName>Gold Partner User</fullName>
            </value>
            <value>
                <fullName>High Volume Customer Portal</fullName>
            </value>
            <value>
                <fullName>High Volume Customer Portal User</fullName>
            </value>
            <value>
                <fullName>Identity User</fullName>
            </value>
            <value>
                <fullName>Marketing User</fullName>
            </value>
            <value>
                <fullName>Partner App Subscription User</fullName>
            </value>
            <value>
                <fullName>Partner Community Login User</fullName>
            </value>
            <value>
                <fullName>Partner Community User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>