salesforce/Document Creator Plugin/force-app/main/default/objects/Template__c/fields/Template_Data__c.field-meta.xml
<CustomField>
    <fullName>Template_Data__c</fullName>
    <label>Template Data</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>